src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}


/* App.css */

/* Global styles */
body {
  font-family: Arial, sans-serif;
  margin: 0;
  padding: 0;
}

/* Header */
header {
  background-color: #0c194f;
  color: #fff;
  padding: 30px;
  text-align: center;
  line-height: 0.5;
}

header h1 {
  margin: 0;
}

/* Main content */
main {
  padding: 20px;
}

section {
  margin-bottom: 40px;
}

h2 {
  color: #333;
  font-size: 24px;
  margin-bottom: 10px;
  padding: 10px;
}

p {
  color: #777;
  font-size: 16px;
  line-height: 1.5;
}

li {
  padding: 4px;
}

/* Footer */
footer {
  background-color: #0c194f;
  color: #fff;
  padding: 20px;
  text-align: center;
}

/* Responsive styles */
@media (max-width: 600px) {
  /* Adjust styles for smaller screens */
  header {
    padding: 10px;
  }

  header h1 {
    font-size: 20px;
  }

  main {
    padding: 10px;
  }

  h2 {
    font-size: 20px;
  }

  p {
    font-size: 14px;
  }

  footer {
    padding: 10px;
  }
}

.myJobTitle {
  font-size: 14pt;
  font-style: italic;
  color: #b3b3b3;
  font-weight: lighter;
}

.myEmail {
  font-size: 12pt;
  font-style: italic;
  color: #777;
  font-weight: lighter;
  padding-top: 15px;
}

.mainContainer h1, 
.mainContainer p {
  padding: 10px;
}


/* Job section */
.job-container {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 30px;
}

.job {
  flex-basis: 50%;
  margin: 5px 0;
  background-color: #f4f4f4;
  border-radius: 8px;
  padding: 15px;
  margin-bottom: 20px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
}

.job h3,
.job h4{
  margin: 5px 0;
}

.job p {
  margin: 5px 0;
  font-size: 11pt;
  padding: 0;
}

.job h4 {
  font-style: italic;
}

.job + .job {
  margin-top: 15px;
}

/* Responsive styles */
@media (min-width: 600px) {
  .job-container {
    flex-wrap: nowrap;
  }

  .job {
    flex-basis: calc(50% - 10px); /* Account for margin */
    margin: 5px;
    max-width: 1200px;
    margin: 0 auto;
  }

  h2, .aboutMeText {
    max-width: 1200px;
    margin: 0 auto;
  }
}

li span.highlight {
  color: #8118c7; /* Set the text color for highlighting */
  font-weight: bold;
  animation-name: highlightAnimation;
  animation-duration: 9s;
  animation-iteration-count: infinite;
}

@keyframes highlightAnimation {
  0% {
    color: #8118c7 /* Starting background color */
  }
  50% {
    color: #e01f12; /* Intermediate background color */
  }
  100% {
    color: #8118c7 /* Ending background color */
  }
}

.video-section {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 30px;
  text-align: center;
}

.video-section iframe {
  width: 800px;
  height: 450px;
}

.videoTitle {
  text-align: center;
}

.videoTitle h2 {
  font-size: 20pt;
}

.social-icons a {
  margin-right: 30px;
  color: #fff;
  font-size: 20px;
  transition: color 0.3s ease;
}

